--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
+    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/firebase": "^5.2.0",
     "element-ui": "^2.4.11",
-    "@nuxtjs/axios": "^5.3.6"
+    "firebase": "^7.14.6",
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {}
 }
