--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/firebase": "^5.2.0",
     "element-ui": "^2.4.11",
     "firebase": "^7.14.6",
+    "jwt-decode": "^2.2.0",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {}
