--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-ui": "^2.4.11",
     "firebase": "^7.14.6",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.26.0",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {}
