--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "firebase": "^7.14.6",
     "jwt-decode": "^2.2.0",
     "moment": "^2.26.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue-cookie-law": "^1.13.3"
   },
   "devDependencies": {}
 }
